Fix select vertical alignment with the span text

--- a/milestone-6/assets/css/style.css
+++ b/milestone-6/assets/css/style.css
@@ -72,6 +72,8 @@ main > div > h2 {
     background: #171815;
     padding: 0 5px;
     border-radius: 1px;
+    position: relative;
+    top: 2px;
 }
 
 #search_value { 
